# subnet-42

./: .env.example  .gitignore  Dockerfile  Dockerfile.cookies  Dockerfile.cookies.updater  Dockerfile.cookies.updater.docker  Dockerfile.cookies.updater.kubernetes  Dockerfile.vpn  Dockerfile.vpn.updater  Makefile  README.md  README.vpn.md  SCORING.md  docker-compose.yml  entrypoint-multi.sh  entrypoint-vpn.sh  entrypoint.sh  entrypoint.vpn.sh  k8s_entrypoint.sh  miner-statefulset.yaml  miner_tee_addresses  pyproject.toml  requirements.txt  setup-routes.sh  test_miner_tee_addresses
.github/workflows/: docker-publish.yml
db/: init.sql  postgresql_telemetry_database.py  routing_table_database.py  telemetry_database.py
db/migrations/: add_tiktok_fields.sql  refactor_to_json_stats.sql
interfaces/: types.py
miner/: nats_client.py  routes_manager.py  utils.py
neurons/: __init__.py  miner.py  validator.py
notebooks/: score_simulation.ipynb  scoring_analysis.ipynb
scripts/: cookie_grabber.py  init_wallet.py  playwright_cookie_grabber.py  run_validator.py  simple_cookie_grabber.py  update_cookies.sh  update_cookies_kubernetes.sh  update_vpn.sh
static/: routing-table.html  score-simulation.html  worker-registry.html
tests/: test_metagraph_syncing.py  test_metagraph_unit.py  test_monitoring.py  test_nats_client.py  test_weights_e2e.py  test_weights_unit.py
validator/: api_routes.py  background_tasks.py  config.py  demo_multiplatform.py  metagraph.py  nats.py  network_operations.py  node_manager.py  platform_config.py  routing_table.py  scorer.py  telemetry.py  telemetry_storage.py  weights.py
validator/tests/: test_multi_platform_scoring.py  test_weights.py
